--- a/index.html
+++ b/index.html
@@ -30,67 +30,47 @@
             </div>
         </div>
     </nav>
-    <div class="carousel slide" data-bs-ride="carousel" id="carousel-1" style="height: 600px;">
+    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000" id="carousel-1" style="height: 600px;">
         <div class="carousel-inner h-100">
             <div class="carousel-item active h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_6931.jpg" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
-                        <div class="col-md-6 col-xl-4 offset-md-2">
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h1>
-                                <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a>
+                                <h1 class="text-uppercase fw-bold">Handcrafted Desserts</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">PERSONALIZED CAKES THAT BRING ANY SPECIAL OCCASION TO LIFE</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Menu</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_5600.jpg" alt="Slide Image" style="z-index: -1;">
+            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/landscape%20cake%202.png" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
-                        <div class="col-md-6 col-xl-4 offset-md-2">
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h1>
-                                <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Button</a>
+                                <h1 class="text-uppercase fw-bold">Get creative</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">Choose from our vast selection of cake designs or create your own!</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Menu</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_6920.jpg" alt="Slide Image" style="z-index: -1;">
+            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_7181.jpg" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
-                        <div class="col-md-6 col-xl-4 offset-md-2">
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h1>
-                                <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Button</a>
+                                <h1 class="text-uppercase fw-bold">Handcrafted Desserts</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">PERSONALIZED CAKES THAT BRING ANY SPECIAL OCCASION TO LIFE</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Menu</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
         <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button></div>
     </div>
-    <section class="py-5" style="padding-top: 0px;">
-        <div class="container text-center py-5">
-            <p class="mb-4" style="font-size: 1.6rem;">Used by <span class="text-dark bg-success-subtle bg-success-light p-1"><strong>2400+</strong></span>&nbsp;of the best companies in the world.</p><a href="#"> <img class="m-3" src="assets/img/brands/instacart.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/kickstarter.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/lyft.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/shopify.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/pinterest.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/twitter.png"></a>
-        </div>
-    </section>
-    <section>
-        <div data-bss-parallax-bg="true" style="height: 600px;background-image: url(assets/img/cake.jpg);background-position: center;background-size: cover;">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
-                        <div style="max-width: 350px;">
-                            <h1 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h1>
-                            <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Button</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <section>
         <div class="container bg-primary-gradient py-5">
             <div class="row">
@@ -348,7 +328,7 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
 </body>
