--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&amp;display=swap">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
     <link rel="stylesheet" href="assets/css/Hero-Carousel-images.css">
+    <link rel="stylesheet" href="assets/css/Lightbox-Gallery-No-Gutters-baguetteBox.min.css">
+    <link rel="stylesheet" href="assets/css/Stats-icons.css">
     <link rel="stylesheet" href="assets/css/untitled-1.css">
 </head>
 
@@ -37,20 +39,8 @@
                     <div class="row">
                         <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Handcrafted Desserts</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">PERSONALIZED CAKES THAT BRING ANY SPECIAL OCCASION TO LIFE</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Menu</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/landscape%20cake%202.png" alt="Slide Image" style="z-index: -1;">
-                <div class="container d-flex flex-column justify-content-center h-100">
-                    <div class="row">
-                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
-                            <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Get creative</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">Choose from our vast selection of cake designs or create your own!</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Menu</a>
+                                <h1 class="text-uppercase fw-bold">The Little Baker Kitchen</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0); background-color: transparent;">Specializes in crafting delicious pastries and custom cakes for your special occasions</span></p><a class="btn btn-primary btn-lg me-2" role="button" href="index.html#about-us">About Us</a>
                             </div>
                         </div>
                     </div>
@@ -61,15 +51,82 @@
                     <div class="row">
                         <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Handcrafted Desserts</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">PERSONALIZED CAKES THAT BRING ANY SPECIAL OCCASION TO LIFE</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Menu</a>
+                                <h1 class="text-uppercase fw-bold">Custom Cakes and Pastries</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">Choose from our vast selection of cake designs or create your own!</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Sellections</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/cart2.jpg" alt="Slide Image" style="z-index: -1;">
+                <div class="container d-flex flex-column justify-content-center h-100">
+                    <div class="row">
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
+                            <div style="max-width: 350px;">
+                                <h1 class="text-uppercase fw-bold">Perfect for any occasion</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>We're excited to help make your celebration extra special.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Party Carts</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_1059.jpg" alt="Slide Image" style="z-index: -1;">
+                <div class="container d-flex flex-column justify-content-center h-100">
+                    <div class="row">
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
+                            <div style="max-width: 350px;">
+                                <h1 class="text-uppercase fw-bold">Ready to plan your event?</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>Just send us a message on any of our social media accounts, viber, or email.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Contact Us</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button></div>
+        <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="3"></button></div>
+    </div>
+    <div class="container py-4 py-xl-5">
+        <div class="row mb-5">
+            <div class="col-md-10 col-xl-6 text-center mx-auto">
+                <h2>What We Specialize In</h2>
+                <p class="w-lg-50"><span style="color: rgb(0, 0, 0); background-color: transparent;">We're excited to help make your celebration extra special. Whether you're looking for custom cakes, delectable desserts, or planning a party, we've got you covered!</span></p>
+            </div>
+        </div>
+        <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
+            <div class="col">
+                <div>
+                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;background-image: url(&quot;assets/img/products/IMG_5602.jpg&quot;);background-position: center;background-size: cover;"></div>
+                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Custom Orders</a></div>
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;background-image: url(&quot;assets/img/products/IMG_7181.jpg&quot;);background-position: center;background-size: cover;"></div>
+                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Pastries</a></div>
+                </div>
+            </div>
+            <div class="col-lg-6 offset-md-3 offset-lg-3 offset-xl-0">
+                <div>
+                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;background-image: url(&quot;assets/img/products/cart.jpg&quot;);background-position: center;background-size: cover;"></div>
+                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Party Carts &amp; Events</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container py-4 py-xl-5">
+        <div class="row gy-4 gy-md-0">
+            <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
+                <div>
+                    <h1 class="text-uppercase fw-bold">About us</h1>
+                    <p class="my-3">Welcome to The Little Baker Kitchen! Founded by Chef Brent, we specialize in crafting delicious pastries and custom cakes for your special occasions. <br><br>From humble beginnings to representing the Philippines at an international pastry competition, we’re dedicated to making your celebrations unforgettable. Join us in sharing happiness, one treat at a time!</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">See More</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-6">
+                <div class="m-xl-5">
+                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block fit-cover" style="height: 500px;background-image: url(assets/img/products/aboutus.jpg);background-position: center;background-size: cover;"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <section>
         <div class="container bg-primary-gradient py-5">
@@ -331,6 +388,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
+    <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
+    <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
 </body>
 
 </html>
