--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+<link rel="icon" type="image/x-icon" href="./Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - The Little Baker Kitchen</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -18,11 +19,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chef-hat" style="font-size: 30px;">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                        <path d="M12 3c1.918 0 3.52 1.35 3.91 3.151a4 4 0 0 1 2.09 7.723l0 7.126h-12v-7.126a4 4 0 1 1 2.092 -7.723a4 4 0 0 1 3.908 -3.151z"></path>
-                        <path d="M6.161 17.009l11.839 -.009"></path>
-                    </svg></span><span class="fs-6 text-light">The Little Baker Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/Transparent%20Logo.png" style="height: 55px;" width="82" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active link-light" href="index.html">Home</a></li>
@@ -32,50 +29,50 @@
             </div>
         </div>
     </nav>
-    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000" id="carousel-1" style="height: 600px;">
+    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="false" id="carousel-1" style="height: 600px;">
         <div class="carousel-inner h-100">
-            <div class="carousel-item active h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_6931.jpg" alt="Slide Image" style="z-index: -1;">
+            <div class="carousel-item active h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/HomePage1.jpg" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
-                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
-                            <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold" style="font-family: Lobster, serif;">The Little Baker Kitchen</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0); background-color: transparent;">Specializes in crafting delicious pastries and custom cakes for your special occasions</span></p><a class="btn btn-primary btn-lg me-2" role="button" href="index.html#about-us">About Us</a>
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-6 offset-lg-5 offset-xl-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
+                            <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 350px;">
+                                <h1 class="fw-bold" style="font-family: Lobster, serif;">The Little Baker Kitchen</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);">We specialize in crafting delicious pastries and custom cakes for your special occasions.</p><a class="btn btn-primary btn-lg me-2" role="button" href="index.html#about-us">View Portfolio</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_7181.jpg" alt="Slide Image" style="z-index: -1;">
+            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/Home_Page_2.jpg" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
-                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
-                            <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold" style="font-family: Lobster, serif;">Custom Cakes and Pastries</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(45, 45, 45);">Choose from our vast selection of cake designs or create your own!</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Sellections</a>
+                        <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4 offset-sm-1 offset-md-2 offset-lg-5 offset-xl-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
+                            <div class="text-center text-lg-start text-xl-start text-xxl-start" style="max-width: 420px;">
+                                <h1 class="fw-bold" style="font-family: Lobster, serif;">Custom Cakes and Pastries</h1>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0); background-color: transparent;">Choose from our vast selection of&nbsp;designs or create your own!</span></p><a class="btn btn-primary me-2" role="button" href="#" style="margin-top: 11px;">View Pastries</a><a class="btn btn-primary me-2" role="button" href="#" style="margin-top: 11px;">View Design</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/cart2.jpg" alt="Slide Image" style="z-index: -1;">
+            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/Home_Page_3.jpg" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
-                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
-                            <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold" style="font-family: Lobster, serif;">Perfect for any occasion</h1>
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-5 offset-sm-2 offset-md-6 offset-lg-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
+                            <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 370px;">
+                                <h1 class="fw-bold" style="font-family: Lobster, serif;">Perfect for Any Occasion</h1>
                                 <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>We're excited to help make your celebration extra special.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Party Carts</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/IMG_1059.jpg" alt="Slide Image" style="z-index: -1;">
+            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/HomePage4.jpg" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
-                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-0 offset-lg-1" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
-                            <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold" style="font-family: Lobster, serif;">Ready to plan your event?</h1>
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-6 offset-lg-5 offset-xl-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
+                            <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 380px;">
+                                <h1 class="fw-bold" style="font-family: Lobster, serif;">Ready to plan your event?</h1>
                                 <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>Just send us a message on any of our social media accounts, viber, or email.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Contact Us</a>
                             </div>
                         </div>
@@ -83,6 +80,7 @@
                 </div>
             </div>
         </div>
+        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
         <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="3"></button></div>
     </div>
     <div class="container py-4 py-xl-5">
@@ -95,19 +93,26 @@
         <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
             <div class="col">
                 <div>
-                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;background-image: url(&quot;assets/img/products/IMG_5602.jpg&quot;);background-position: center;background-size: cover;"></div>
+                    <div class="carousel slide" data-bs-ride="false" data-bs-pause="false" id="carousel-2">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/reviews3.jpg"></div>
+                            <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Custom%20Orders%202.jpg"></div>
+                            <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Custom_Orders_3.jpg"></div>
+                            <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/IMG_3958.jpg"></div>
+                        </div>
+                        <div><a class="carousel-control-prev" href="#carousel-2" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                        <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-2" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="3"></button></div>
+                    </div>
                     <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Custom Orders</a></div>
                 </div>
             </div>
             <div class="col">
-                <div>
-                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;background-image: url(&quot;assets/img/products/IMG_7181.jpg&quot;);background-position: center;background-size: cover;"></div>
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px" src="assets/img/products/IMG_7181.jpg">
                     <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Pastries</a></div>
                 </div>
             </div>
             <div class="col-lg-6 offset-md-3 offset-lg-3 offset-xl-0">
-                <div>
-                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;background-image: url(&quot;assets/img/products/cart.jpg&quot;);background-position: center;background-size: cover;"></div>
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px" src="assets/img/products/cart.jpg">
                     <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Party Carts &amp; Events</a></div>
                 </div>
             </div>
@@ -122,9 +127,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-xl-6">
-                <div class="m-xl-5">
-                    <div data-bss-parallax-bg="true" class="rounded img-fluid d-block fit-cover" style="height: 500px;background-image: url(assets/img/products/aboutus.jpg);background-position: center;background-size: cover;"></div>
-                </div>
+                <div class="m-xl-5"><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/cart.jpg"></div>
             </div>
         </div>
     </div>
@@ -141,15 +144,11 @@
     </section>
     <div class="container py-4 py-xl-5">
         <div class="row gy-4 gy-md-0">
-            <div class="col-md-6 col-lg-3">
-                <div>
-                    <div data-bss-parallax-bg="true" class="w-100 fit-cover rounded img-fluid" style="min-height: 400px;background-image: url(assets/img/products/IMG_3958.jpg);background-position: center;background-size: cover;"></div>
-                </div>
+            <div class="col-md-6 col-lg-3"><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px" src="assets/img/products/IMG_3958.jpg">
+                <div></div>
             </div>
             <div class="col-md-6 col-lg-3 col-xl-3">
-                <div>
-                    <div data-bss-parallax-bg="true" class="fit-cover rounded img-fluid w-100" style="min-height: 400px;background-image: url(assets/img/products/IMG_5600.jpg);background-position: center;background-size: cover;"></div>
-                </div>
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px" src="assets/img/products/IMG_5600.jpg"></div>
             </div>
             <div class="col-md-12 col-lg-6 d-md-flex align-items-md-center">
                 <div class="text-center text-sm-center text-md-center">
