--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/Transparent%20Logo.png" style="height: 55px;" width="82" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active link-light" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link link-light active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link link-light pricing-nav" href="pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link link-light" href="testimonials.html">Testimonials</a></li>
-                </ul><a class="btn btn-secondary link-light shadow" role="button" href="index.html#contactus">Contact Us</a>
+                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contacts.html">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -73,7 +73,7 @@
                         <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-6 offset-lg-5 offset-xl-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.64);">
                             <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 380px;">
                                 <h1 class="fw-bold" style="font-family: Lobster, serif;">Ready to plan your event?</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>Just send us a message on any of our social media accounts, viber, or email.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="index.html#contactus">Contact Us</a>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>Just send us a message on any of our social media accounts, viber, or email.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="contacts.html">Contact Us</a>
                             </div>
                         </div>
                     </div>
@@ -143,10 +143,10 @@
             <div class="col-md-6 col-lg-7 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
                 <div>
                     <h1 class="fw-bold" style="font-family: Lobster, serif;">About Us</h1>
-                    <p class="my-3">Welcome to The Little Baker Kitchen! Founded by Chef Brent, we specialize in crafting delicious pastries and custom cakes for your special occasions. <br><br>From humble beginnings to representing the Philippines at an international pastry competition, we’re dedicated to making your celebrations unforgettable. Join us in sharing happiness, one treat at a time!</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Find out more</a>
+                    <p class="my-3">Welcome to The Little Baker Kitchen! Founded by Chef Brent, we specialize in crafting delicious pastries and custom cakes for your special occasions. <br><br>From humble beginnings to representing the Philippines at an international pastry competition, we’re dedicated to making your celebrations unforgettable. Join us in sharing happiness, one treat at a time!</p><a class="btn btn-primary btn-lg me-2" role="button" href="aboutus.html">Find out more</a>
                 </div>
             </div>
-            <div class="col-sm-9 col-md-6 col-lg-5 col-xl-5 offset-sm-2 offset-md-0 offset-lg-0">
+            <div class="col-11 col-sm-8 col-md-6 col-lg-5 col-xl-5 offset-1 offset-sm-2 offset-md-0 offset-lg-0">
                 <div class="m-xl-5"><img class="rounded img-fluid d-block fit-cover" style="height: 500px" src="assets/img/products/74FADB63-86B7-473E-91DF-73F213F7E45D.jpeg" width="336" height="500"></div>
             </div>
         </div>
@@ -277,7 +277,103 @@
                                     <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.84);">
                                         <div class="text-center">
                                             <h1 class="fw-bold" style="font-family: Lobster, serif;">Albert Edsel Chua</h1>
-                                            <p class="my-3" style="color: var(--bs-primary-text-emphasis);">Thanks again! As always! Exceed the expectations… never fails! Grabe super ganda lang! Husay mo @thelittlebakerkitchen</p><button class="btn btn-primary me-2" type="button" data-bs-toggle="modal" data-bs-target="#pictureModal1"> View Picture</button>
+                                            <p class="my-3" style="color: var(--bs-primary-text-emphasis);">Thanks again! As always! Exceed the expectations… never fails! Grabe super ganda lang! Husay mo @thelittlebakerkitchen</p><button class="btn btn-primary me-2" type="button" data-bs-toggle="modal" data-bs-target="#pictureModal2"> View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/products/Testimonial3.jpg" alt="Slide Image" style="z-index: -1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family: Lobster, serif;">Natalie Diane Lim-Ang</h1>
+                                            <p class="my-3" style="color: var(--bs-primary-text-emphasis);">Thank you TLB Kitchen!!! Always make the best birthday cakes for my girls!</p><button class="btn btn-primary me-2" type="button" data-bs-toggle="modal" data-bs-target="#pictureModal3"> View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block w-100 position-absolute h-100 fit-cover" alt="Slide Image" src="assets/img/products/Testimonial4.jpg" style="z-index:-1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family:Lobster, serif;">Annechi Go</h1>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);">"Wow ang ganda… Super like n like ni shobe"</p><button class="btn btn-primary me-2" data-bs-target="#pictureModal4" data-bs-toggle="modal" type="button">View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block w-100 position-absolute h-100 fit-cover" alt="Slide Image" src="assets/img/products/Testimonial5.jpg" style="z-index:-1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family:Lobster, serif;">Alberto Ong Chan</h1>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);">"The seniors they all like the puto and kutsinta they said it’s very delicious"</p><button class="btn btn-primary me-2" data-bs-target="#pictureModal5" data-bs-toggle="modal" type="button">View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block w-100 position-absolute h-100 fit-cover" alt="Slide Image" src="assets/img/products/Testimonial6.jpg" style="z-index:-1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family:Lobster, serif;">Sonia C. Tantuco</h1>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);">"Awesome!"</p><button class="btn btn-primary me-2" data-bs-target="#pictureModal6" data-bs-toggle="modal" type="button">View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block w-100 position-absolute h-100 fit-cover" alt="Slide Image" src="assets/img/products/Testimonial7.jpg" style="z-index:-1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family:Lobster, serif;">Jingle Uy Lee</h1>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);">"Beautiful and yummy cake as always"</p><button class="btn btn-primary me-2" data-bs-target="#pictureModal7" data-bs-toggle="modal" type="button">View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block w-100 position-absolute h-100 fit-cover" alt="Slide Image" src="assets/img/products/Testimonial8.jpg" style="z-index:-1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family:Lobster, serif;">Karen Tan</h1>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);">"Thank you TLB Kitchen! Thank you for her birthday cake! Super gusto niya!"</p><button class="btn btn-primary me-2" data-bs-target="#pictureModal8" data-bs-toggle="modal" type="button">View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block w-100 position-absolute h-100 fit-cover" alt="Slide Image" src="assets/img/products/Testimonial9.jpg" style="z-index:-1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family:Lobster, serif;">Celuy Shi</h1>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);">"The cake is so gorgeous"</p><button class="btn btn-primary me-2" data-bs-target="#pictureModal9" data-bs-toggle="modal" type="button">View Picture</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item h-100"><img class="w-100 d-block w-100 position-absolute h-100 fit-cover" alt="Slide Image" src="assets/img/products/Testimonial10.jpg" style="z-index:-1;">
+                            <div class="container d-flex flex-column justify-content-center h-100">
+                                <div class="row">
+                                    <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
+                                        <div class="text-center">
+                                            <h1 class="fw-bold" style="font-family:Lobster, serif;">Jen Lim</h1>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);">"Ang sarap sobra at tama lang ang tamis nya, marami na ako natikman, ito ang the best cookies!"</p><button class="btn btn-primary me-2" data-bs-target="#pictureModal10" data-bs-toggle="modal" type="button">View Picture</button>
                                         </div>
                                     </div>
                                 </div>
@@ -285,7 +381,7 @@
                         </div>
                     </div>
                     <div><a class="carousel-control-prev" href="#carousel-5" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-5" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
-                    <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-5" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="1"></button></div>
+                    <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-5" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="3"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="4"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="5"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="6"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="7"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="8"></button> <button type="button" data-bs-target="#carousel-5" data-bs-slide-to="9"></button></div>
                 </div>
             </div>
         </div>
@@ -372,16 +468,16 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="aboutus.html">Company</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Others</h3>
                     <ul class="list-unstyled">
                         <li><a href="#">Blogs</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="contacts.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
